<resources>
    <string name="app_name">HappyHourHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Happy Hour Hub </string>
    <string name="introduction">Happy Hour Hub is your go-to resource for discovering, crafting, and enjoying a wide range of delightful cocktails.</string>
    <string name="motto">Enjoying every moment with a sip creating memories</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginText">Let\'s Login.</string>
    <string name="loginDescription">Don\'t have an account? Register.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="registerText">Let\'s Register</string>
    <string name="forgotPasswordText">Already have an account? Login.</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="contact">Phone number</string>
    <string name="userEmail">Enter your Email</string>
    <string name="userPassword">New Password</string>
    <string name="yourEmail">useremail</string>
    <string name="update">Update</string>
    <string name="userPhone">Enter PhoneNo</string>
    <string name="yourPhone">Phone Number</string>
    <string name="alcoholic">Alchoholic Cocktails</string>
    <string name="nonalcoholic">Non Alcoholic Cocktails</string>
    <string name="home">Home</string>
    <string name="recipe">Recipe</string>
    <string name="cart">Cart</string>
    <string name="title_activity_payment">Payment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="search">Search Cocktails</string>
    <string name="username">Username</string>
    <string name="available">Available Cocktails</string>
    <string name="famous">Famous Cocktails</string>
    <string name="noAlcohol">Non Alcoholic</string>
    <string name="alcohol">Alcoholic</string>
    <string name="name">Name :</string>
    <string name="price">Price :</string>
    <string name="priceTag">1000</string>
    <string name="description">Description :</string>
    <string name="descriptionTag">Gin flavour</string>
    <string name="type">Type :</string>
    <string name="typeTag">Alcoholic</string>
    <string name="welcome1">Welcome</string>
    <string name="Cart">MY CART</string>
    <string name="order">ORDER NOW!</string>
    <string name="item">3</string>
    <string name="text">items in the cart</string>
    <string name="total">Total</string>
    <string name="amount">Ksh 1000</string>
    <string name="cocktail">Cocktail</string>
    <string name="cocktailPrice">Ksh 500</string>
    <string name="itemCount">1</string>
    <string name="ksh">Ksh</string>
    <string name="money">500</string>
    <string name="descriptionCocktail">An apple cocktail is any cocktail that contains apple juice, cider, or brandy. Apple cocktails are popular in the fall, when apples are in season, but they can be enjoyed year-round.</string>
    <string name="cocktailName">Apple Cocktail</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="welcome_to_the_admin_dash_board">Welcome to the Admin Dash Board</string>
    <string name="name1">Name</string>
    <string name="price1">Price</string>
    <string name="description1">Description</string>
    <string name="type1">Type</string>
    <string name="image1">Image</string>
    <string name="product_name">product name</string>
    <string name="product_price">product price</string>
    <string name="product_description">product description</string>
    <string name="alcoholic_or_non_alcoholic">Alcoholic or non-Alcoholic</string>
    <string name="upload_image">Upload Image</string>
    <string name="post">Post</string>
    <string name="cocktailType">Alcoholic</string>
    <string name="area">Area :</string>
    <string name="inst">-Instructions :</string>
    <string name="ingredient">-Ingredients :</string>
    <string name="measurements">-Measurements :</string>
    <string name="pay">Pay</string>
</resources>

