<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_blue"
    tools:context=".activities.DescriptionActivity">

    <ImageView
        android:id="@+id/cocktailImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cocktail3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:backgroundTint="@color/white_smoke"
        android:background="@drawable/background_descr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/cocktailLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cocktailNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/cocktailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/cocktailName"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <TextView
                android:id="@+id/cocktailPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ksh"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/cocktailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/money"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textViewPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TypeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cocktailDescriptionTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cocktailLinear">

            <TextView
                android:id="@+id/cocktailTypeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/type"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/cocktailType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocktailType"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/cocktailDescriptionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TypeLayout"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/cocktailDescription"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptionCocktail"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/addToCartButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cocktailDescriptionTxt"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="305dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/g_blue"
            android:text="@string/add_to_cart"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cocktailDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>