<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="15dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
                android:id="@+id/cocktailImage"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/cocktailtwo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <TextView
                android:id="@+id/cocktailNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guidelineMrgBottom" />

    <TextView
                android:id="@+id/cocktailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cocktailNameTxt"
                app:layout_constraintTop_toTopOf="@id/guidelineMrgBottom" />

    <TextView
                android:id="@+id/cocktailPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailNameTxt" />

           <TextView
                android:id="@+id/cocktailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceTag"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/cocktailPriceTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailName" />

            <TextView
                android:id="@+id/cocktailDescriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailPriceTxt" />

            <TextView
                android:id="@+id/cocktailDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionTag"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/cocktailDescriptionTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailPrice" />

            <TextView
                android:id="@+id/cocktailTypeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailDescriptionTxt" />

            <TextView
                android:id="@+id/cocktailType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeTag"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/cocktailTypeTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cocktailDescription" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMrgBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.56" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

