<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blury_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/happy_hour_hub"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgTop"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userPhone"
        style="@style/h2"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineMrgTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgMiddle"/>

    <EditText
        android:id="@+id/userPhone"
        style="@style/editText"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/yourPhone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineMrgMiddle"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineMrgTop"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/userPassword"
        style="@style/editText"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineMrgBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineMrgMiddle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userPassword"
        style="@style/h2"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@id/guidelineMrgMiddle"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgBottom"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="55dp"
        style="@style/blueButtonStyle"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineMrgBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>